--- a/src/HelloFresh/HelloFreshOffer.css
+++ b/src/HelloFresh/HelloFreshOffer.css
@@ -1,21 +1,21 @@
 .offer-container {
     background-color: white;
     color: grey;
-    transform: translateY(-314px);
+    /* transform: translateY(-314px); */
+    /* margin-top: -614px; */
     font-size: 14.2px;
-    height: 200px;
+    /* height: 200px; */
     
 }
 
 .offer-paragraph {
-    /* border: 2px solid red; */
     width: 80%;
     margin-left: 10%;
-    transform: translateY(30px);
+    /* transform: translateY(30px); */
 }
 
 hr {
-    transform: translateY(30px);
+    /* transform: translateY(30px); */
     width: 99%;
     border: none;
     border-bottom: 1px solid grey;
